legend-engine-rust/crates/protocol/tests/snapshots/snapshot_tests__literal_strict_date.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 750
expression: json
---
{
  "_type": "strictDate",
  "value": "2024-01-15"
}
