legend-engine-rust/crates/protocol/tests/snapshots/snapshot_tests__literal_strict_time.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 750
expression: json
---
{
  "_type": "strictTime",
  "value": "10:30:00"
}
