legend-engine-rust/crates/protocol/tests/snapshots/snapshot_tests__member_access.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 491
expression: json
---
{
  "_type": "property",
  "parameters": [
    {
      "_type": "var",
      "name": "this"
    }
  ],
  "property": "name"
}
